cập nhật favico.ico, tăng tốc web site, lỗi build